--- a/roles/debian11-repo_setup/tasks/main.yml
+++ b/roles/debian11-repo_setup/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: add php repo (1/2)
-  ansible.builtin.uri:
+  uri:
     url: https://packages.sury.org/php/apt.gpg
     dest: /usr/share/keyrings/php-archive-keyring.gpg
 - name: add php repo (2/2)
@@ -8,5 +8,5 @@
 - name: add mariadb repo
   raw: curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | sudo bash
 - name: update sources
-  ansible.builtin.apt:
+  apt:
     update_cache: yes
