--- a/roles/debian11-install_things/tasks/main.yml
+++ b/roles/debian11-install_things/tasks/main.yml
@@ -31,7 +31,7 @@
     - php8.0-sqlite3
     - libapache2-mod-php8.0
     state: latest
-- name: install things to fix know nextcloud errors
+- name: install things to fix know nextcloud buggs/errors
   apt:
     name:
     - libmagickcore-6.q16-6-extra
