--- a/roles/debian11-php/tasks/main.yml
+++ b/roles/debian11-php/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# not done need to fix the replacement
 - name: change php memory limit to 512MB
   replace:
       path: /etc/php/8.0/apache2/php.ini
